make the EWSB loop order configurable
Since the pole mass loop order is configurable, the EWSB loop order
has to be as well (to be consistent).

--- a/templates/run.cpp.in
+++ b/templates/run.cpp.in
@@ -67,6 +67,7 @@ public:
    void set_parameter_output_scale(double s) { parameter_output_scale = s; }
    void set_precision_goal(double precision_goal_) { precision_goal = precision_goal_; }
    void set_pole_mass_loop_order(unsigned l) { model.set_pole_mass_loop_order(l); }
+   void set_ewsb_loop_order(unsigned l) { model.set_ewsb_loop_order(l); }
    void set_max_iterations(unsigned n) { max_iterations = n; }
    void set_calculate_sm_masses(bool flag) { calculate_sm_masses = flag; }
 
@@ -247,6 +248,8 @@ int main(int argc, const char* argv[])
    runner.set_parameter_output_scale(slha_io.get_parameter_output_scale());
    runner.set_pole_mass_loop_order(
       program_options.get(Program_options::pole_mass_loop_order));
+   runner.set_ewsb_loop_order(
+      program_options.get(Program_options::ewsb_loop_order));
 
    runner.run(oneset, input);
 
