--- a/templates/low_scale_spectrum_generator.hpp.in
+++ b/templates/low_scale_spectrum_generator.hpp.in
@@ -18,26 +18,19 @@
 
 // File generated at @DateAndTime@
 
-#include "@ModelName@_input_parameters.hpp"
+#ifndef @ModelName@_SPECTRUM_GENERATOR_H
+#define @ModelName@_SPECTRUM_GENERATOR_H
+
 #include "@ModelName@_two_scale_model.hpp"
 #include "@ModelName@_two_scale_susy_scale_constraint.hpp"
 #include "@ModelName@_two_scale_low_scale_constraint.hpp"
 #include "@ModelName@_two_scale_convergence_tester.hpp"
 #include "@ModelName@_two_scale_initial_guesser.hpp"
 #include "@ModelName@_utilities.hpp"
-#include "@ModelName@_slha_io.hpp"
 
+#include "coupling_monitor.hpp"
 #include "two_scale_running_precision.hpp"
 #include "two_scale_solver.hpp"
-#include "coupling_monitor.hpp"
-#include "error.hpp"
-#include "ew_input.hpp"
-#include "program_options.hpp"
-#include "lowe.h"
-#include "command_line_options.hpp"
-
-#include <iostream>
-#include <vector>
 
 namespace flexiblesusy {
 
@@ -206,60 +199,4 @@ void @ModelName@_runner<T>::write_spectrum(const std::string& filename) const
 
 } // namespace flexiblesusy
 
-int main(int argc, const char* argv[])
-{
-   using namespace flexiblesusy;
-   using namespace softsusy;
-   typedef Two_scale algorithm_type;
-
-   Command_line_options options(argc, argv);
-   if (options.must_exit())
-      return options.status();
-
-   const std::string slha_input_file(options.get_slha_input_file());
-   const std::string slha_output_file(options.get_slha_output_file());
-   @ModelName@_slha_io slha_io;
-   Program_options program_options;
-   QedQcd oneset;
-   @ModelName@_input_parameters input;
-
-   if (!slha_input_file.empty()) {
-      try {
-         slha_io.read_from_file(slha_input_file);
-         slha_io.fill(oneset);
-         slha_io.fill(input);
-         slha_io.fill(program_options);
-      } catch (const Error& error) {
-         ERROR(error.what());
-         return 1;
-      }
-   }
-   oneset.toMz(); // run SM fermion masses to MZ
-
-   @ModelName@_runner<algorithm_type> runner;
-   runner.set_precision_goal(program_options.get(Program_options::precision));
-   runner.set_max_iterations(program_options.get(Program_options::max_iterations));
-   runner.set_calculate_sm_masses(
-      program_options.get(Program_options::calculate_sm_masses) >= 1.0);
-   runner.set_parameter_output_scale(slha_io.get_parameter_output_scale());
-   runner.set_pole_mass_loop_order(
-      program_options.get(Program_options::pole_mass_loop_order));
-   runner.set_ewsb_loop_order(
-      program_options.get(Program_options::ewsb_loop_order));
-
-   runner.run(oneset, input);
-
-   if (slha_output_file.empty()) {
-      if (runner.get_problems().have_serious_problem())
-         runner.get_problems().print();
-      else
-         runner.get_model().print(std::cout);
-   } else {
-      slha_io.set_spinfo(runner.get_problems());
-      if (!runner.get_problems().have_serious_problem())
-         slha_io.set_spectrum(runner.get_model());
-      slha_io.write_to_file(slha_output_file);
-   }
-
-   return 0;
-}
+#endif
