--- a/templates/run.cpp.in
+++ b/templates/run.cpp.in
@@ -59,28 +59,28 @@ int main(int argc, const char* argv[])
    }
    oneset.toMz(); // run SM fermion masses to MZ
 
-   @ModelName@_runner<algorithm_type> runner;
-   runner.set_precision_goal(program_options.get(Program_options::precision));
-   runner.set_max_iterations(program_options.get(Program_options::max_iterations));
-   runner.set_calculate_sm_masses(
+   @ModelName@_spectrum_generator<algorithm_type> spectrum_generator;
+   spectrum_generator.set_precision_goal(program_options.get(Program_options::precision));
+   spectrum_generator.set_max_iterations(program_options.get(Program_options::max_iterations));
+   spectrum_generator.set_calculate_sm_masses(
       program_options.get(Program_options::calculate_sm_masses) >= 1.0);
-   runner.set_parameter_output_scale(slha_io.get_parameter_output_scale());
-   runner.set_pole_mass_loop_order(
+   spectrum_generator.set_parameter_output_scale(slha_io.get_parameter_output_scale());
+   spectrum_generator.set_pole_mass_loop_order(
       program_options.get(Program_options::pole_mass_loop_order));
-   runner.set_ewsb_loop_order(
+   spectrum_generator.set_ewsb_loop_order(
       program_options.get(Program_options::ewsb_loop_order));
 
-   runner.run(oneset, input);
+   spectrum_generator.run(oneset, input);
 
    if (slha_output_file.empty()) {
-      if (runner.get_problems().have_serious_problem())
-         runner.get_problems().print();
+      if (spectrum_generator.get_problems().have_serious_problem())
+         spectrum_generator.get_problems().print();
       else
-         runner.get_model().print(std::cout);
+         spectrum_generator.get_model().print(std::cout);
    } else {
-      slha_io.set_spinfo(runner.get_problems());
-      if (!runner.get_problems().have_serious_problem())
-         slha_io.set_spectrum(runner.get_model());
+      slha_io.set_spinfo(spectrum_generator.get_problems());
+      if (!spectrum_generator.get_problems().have_serious_problem())
+         slha_io.set_spectrum(spectrum_generator.get_model());
       slha_io.write_to_file(slha_output_file);
    }
 
