--- a/templates/run.cpp.in
+++ b/templates/run.cpp.in
@@ -73,10 +73,13 @@ int main(int argc, const char* argv[])
    spectrum_generator.run(oneset, input);
 
    if (slha_output_file.empty()) {
-      if (spectrum_generator.get_problems().have_serious_problem())
+      if (spectrum_generator.get_problems().have_serious_problem()) {
          spectrum_generator.get_problems().print();
-      else
+      } else {
          spectrum_generator.get_model().print(std::cout);
+         // spectrum_generator.write_spectrum("@ModelName@_spectrum.dat");
+         // spectrum_generator.write_running_couplings("@ModelName@_rge_running.dat");
+      }
    } else {
       slha_io.set_spinfo(spectrum_generator.get_problems());
       if (!spectrum_generator.get_problems().have_serious_problem())
