--- a/templates/two_scale_model.cpp.in
+++ b/templates/two_scale_model.cpp.in
@@ -27,10 +27,10 @@
 #ifdef ENABLE_LOOPTOOLS
 #include <clooptools.h>
 #endif
-#include <boost/thread.hpp>
 
 #include <cmath>
 #include <iostream>
+#include <thread>
 
 namespace flexiblesusy {
 
