--- a/templates/start.m.in
+++ b/templates/start.m.in
@@ -21,5 +21,5 @@ MakeFlexibleSUSY[Eigenstates -> SARAH`EWSB,
                  highPrecision -> {hh, Ah, Hpm},
                  mediumPrecision -> {},
                  lowPrecision -> {},
-                 SeparateThread -> {SARAH`Selectron, SARAH`Sneutrino, SARAH`TopSquark, SARAH`BottomSquark}
+                 EnablePoleMassThreads -> True
                 ];
