--- a/templates/spectrum_generator.hpp.in
+++ b/templates/spectrum_generator.hpp.in
@@ -30,6 +30,7 @@
 #include "@ModelName@_utilities.hpp"
 
 #include "coupling_monitor.hpp"
+#include "error.hpp"
 #include "two_scale_running_precision.hpp"
 #include "two_scale_solver.hpp"
 
