rename range vector to be more generic

--- a/templates/scan.cpp.in
+++ b/templates/scan.cpp.in
@@ -47,12 +47,12 @@ int main()
    spectrum_generator.set_pole_mass_loop_order(1);
    spectrum_generator.set_ewsb_loop_order(1);
 
-   const std::vector<double> tan_beta_range(float_range(0., 100., 10));
+   const std::vector<double> range(float_range(0., 100., 10));
 
    cout << "# [1] tan(beta) | [2] error | [3] lightest Higgs/GeV | [4] time/s\n";
 
-   for (std::vector<double>::const_iterator it = tan_beta_range.begin(),
-           end = tan_beta_range.end(); it != end; ++it) {
+   for (std::vector<double>::const_iterator it = range.begin(),
+           end = range.end(); it != end; ++it) {
       input.TanBeta = *it;
 
       stopwatch.start();
