capitalize user option and give it a more specific name

--- a/templates/start.m.in
+++ b/templates/start.m.in
@@ -18,8 +18,8 @@ MakeFlexibleSUSY[Eigenstates -> SARAH`EWSB,
                  InputFile -> FileNameJoin[{"@DIR@","FlexibleSUSY.m"}],
                  softSusyCompatibleRGEs -> True,
                  DefaultDiagonalizationPrecision -> MediumPrecision,
-                 highPrecision -> {hh, Ah, Hpm},
-                 mediumPrecision -> {},
-                 lowPrecision -> {},
+                 HighDiagonalizationPrecision -> {hh, Ah, Hpm},
+                 MediumDiagonalizationPrecision -> {},
+                 LowDiagonalizationPrecision -> {},
                  EnablePoleMassThreads -> True
                 ];
