--- a/templates/SMSSM/FlexibleSUSY.m.in
+++ b/templates/SMSSM/FlexibleSUSY.m.in
@@ -9,11 +9,10 @@ MINPAR = { {1, m0},
            {5, Azero}
          };
 
-EXTPAR = { {23, MuInput},
-           {24, BMuInput},
-           {61, LambdaInput},
+EXTPAR = { {61, LambdaInput},
+           {62, KappaInput},
+           {65, LambdaSInput},
            {66, L1Input},
-           {67, LL1Input},
            {68, MSInput},
            {69, BMSInput}
          };
@@ -23,22 +22,23 @@ DefaultParameterPoint = {
     {m12, 200},
     {TanBeta, 10},
     {Azero, -500},
-    {MuInput, 0},
-    {BMuInput, 0},
     {LambdaInput, 0.1},
+    {KappaInput, 0.1},
+    {LambdaSInput, 100},
     {L1Input, 0},
-    {LL1Input, 0},
     {MSInput, 0},
     {BMSInput, 0}
 };
 
-ParametersToSolveTadpoles = { \[Kappa], vS, ms2 };
+ParametersToSolveTadpoles = { \[Mu], B[\[Mu]], L[L1] };
 
 SUSYScale = Sqrt[M[Su[1]]*M[Su[6]]];
 
 SUSYScaleFirstGuess = Sqrt[m0^2 + 4 m12^2];
 
-SUSYScaleInput = {};
+SUSYScaleInput = {
+   {vS, LambdaSInput / \[Lambda]}
+};
 
 HighScale = g1 == g2;
 
@@ -55,16 +55,15 @@ HighScaleInput={
    {me2, UNITMATRIX[3] m0^2},
    {mHu2, m0^2},
    {mHd2, m0^2},
+   {ms2, m0^2},
    {\[Lambda], LambdaInput},
+   {\[Kappa], KappaInput},
    {T[\[Kappa]], Azero \[Kappa]},
    {T[\[Lambda]], Azero LambdaInput},
    {MassB, m12},
    {MassWB,m12},
    {MassG,m12},
-   {\[Mu], MuInput},
-   {B[\[Mu]], BMuInput},
    {L1, L1Input},
-   {L[L1], LL1Input},
    {MS, MSInput},
    {B[MS], BMSInput}
 };
@@ -82,9 +81,9 @@ InitialGuessAtLowScale = {
    {vd, SM[vev] Cos[ArcTan[TanBeta]]},
    {vu, SM[vev] Sin[ArcTan[TanBeta]]},
    {\[Lambda], LambdaInput},
-   {\[Kappa], 0.1},
-   {vS, 1000},
-   {ms2, SM[MZ]^2}
+   {\[Mu], SM[MZ]},
+   {B[\[Mu]], SM[MZ]^2},
+   {L[L1], SM[MZ]^3}
 };
 
 InitialGuessAtHighScale = {};
