--- a/templates/MRSSM/FlexibleSUSY.m.in
+++ b/templates/MRSSM/FlexibleSUSY.m.in
@@ -19,6 +19,10 @@ SUSYScaleFirstGuess = 1000;
    automatically *)
 SUSYScaleInput = {};
 
+LowScale = SM[MZ];
+
+LowScaleFirstGuess = SM[MZ];
+
 LowScaleInput = {
     {vd, 2 MZDRbar / Sqrt[GUTNormalization[g1]^2 g1^2 + g2^2] Cos[ArcTan[TanBeta]]},
     {vu, 2 MZDRbar / Sqrt[GUTNormalization[g1]^2 g1^2 + g2^2] Sin[ArcTan[TanBeta]]}
