--- a/templates/low_scale_spectrum_generator.hpp.in
+++ b/templates/low_scale_spectrum_generator.hpp.in
@@ -138,21 +138,16 @@ void @ModelName@_spectrum_generator<T>::run(const QedQcd& oneset,
           > std::numeric_limits<double>::epsilon()) {
          model.run_to(parameter_output_scale);
       }
-   } catch (const NoConvergenceError& error) {
+   } catch (const NoConvergenceError&) {
       model.get_problems().flag_no_convergence();
-      ERROR(error.what());
-   } catch (const NonPerturbativeRunningError& error) {
+   } catch (const NonPerturbativeRunningError&) {
       model.get_problems().flag_no_perturbative();
-      ERROR(error.what());
    } catch (const Error& error) {
       model.get_problems().flag_thrown();
-      ERROR(error.what());
    } catch (const std::string& str) {
       model.get_problems().flag_thrown();
-      ERROR(str);
    } catch (const char* str) {
       model.get_problems().flag_thrown();
-      ERROR(str);
    }
 }
 
