--- a/templates/spectrum_generator.hpp.in
+++ b/templates/spectrum_generator.hpp.in
@@ -58,6 +58,7 @@ public:
    const Problems<@ModelName@_info::NUMBER_OF_PARTICLES>& get_problems() const {
       return model.get_problems();
    }
+   int get_exit_code() const { return get_problems().have_serious_problem(); };
    void set_parameter_output_scale(double s) { parameter_output_scale = s; }
    void set_precision_goal(double precision_goal_) { precision_goal = precision_goal_; }
    void set_pole_mass_loop_order(unsigned l) { model.set_pole_mass_loop_order(l); }
