--- a/test/space dir/Makefile.in
+++ b/test/space dir/Makefile.in
@@ -11,15 +11,13 @@ all: touched touched-multiple
 
 touched:
 	@echo "trying to touch single file: $@"
-	touch '$(call abspathx,$@)'
+	touch $(call abspathx,$@)
 	@echo "done"
 
 touched-multiple:
 	@echo "trying to touch multiple files: $(TOUCHED_FILES)"
-	touch '$(call abspathx,$(TOUCHED_FILES))'
+	touch $(call abspathx,$(TOUCHED_FILES))
 	@echo "done"
 
 clean:
-	rm -f touched
-	rm -f $(TOUCHED_FILES)
-	rm -f "$(TOUCHED_FILES)"
+	rm -f touched $(TOUCHED_FILES)
