--- a/templates/MRSSM/FlexibleSUSY.m.in
+++ b/templates/MRSSM/FlexibleSUSY.m.in
@@ -11,7 +11,7 @@ DefaultParameterPoint = {
 
 ParametersToSolveTadpoles = { mHd2, mHu2, mS2, mT2 };
 
-SUSYScale = AbsSqrt[mu2[3,3]];
+SUSYScale = 1000;
 
 SUSYScaleFirstGuess = 1000;
 
