generate macro with package name

--- a/doc/version.tex.in
+++ b/doc/version.tex.in
@@ -1,1 +1,2 @@
-\newcommand\FlexibleSUSYVersion{@VERSION@}
+\newcommand{\FlexibleSUSYVersion}{@VERSION@\xspace}
+\newcommand{\FlexibleSUSY}{@PKGNAME@\xspace}
