--- a/templates/module.mk.in
+++ b/templates/module.mk.in
@@ -55,7 +55,7 @@ RUN_@CLASSNAME@_EXE := $(DIR)/run_@CLASSNAME@.x
 
 SCAN_@CLASSNAME@_EXE := $(DIR)/scan_@CLASSNAME@.x
 
-.PHONY:         all-$(MODNAME) clean-$(MODNAME) distclean-$(MODNAME)
+.PHONY:         all-$(MODNAME) clean-$(MODNAME) distclean-$(MODNAME) run-metacode-$(MODNAME)
 
 all-$(MODNAME): $(LIB@CLASSNAME@)
 
@@ -70,110 +70,50 @@ clean::         clean-$(MODNAME)
 
 distclean::     distclean-$(MODNAME)
 
-$(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp: $(DIR)/start.m $(DIR)/FlexibleSUSY.m $(META_SRC) $(TEMPLATES)
+METACODE_STAMP_@CLASSNAME@ := $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
+
+$(DIR)/@CLASSNAME@_two_scale_susy_parameters.cpp \
+$(DIR)/@CLASSNAME@_two_scale_soft_parameters.hpp \
+$(DIR)/@CLASSNAME@_two_scale_soft_parameters.cpp \
+$(DIR)/scan_@CLASSNAME@.cpp \
+$(DIR)/@CLASSNAME@_slha_io.hpp \
+$(DIR)/@CLASSNAME@_slha_io.cpp \
+$(DIR)/@CLASSNAME@_physical.hpp \
+$(DIR)/@CLASSNAME@_physical.cpp \
+$(DIR)/@CLASSNAME@_model.hpp \
+$(DIR)/@CLASSNAME@_lattice_model.hpp \
+$(DIR)/@CLASSNAME@_lattice_model.cpp \
+$(DIR)/@CLASSNAME@_two_scale_model.hpp \
+$(DIR)/@CLASSNAME@_two_scale_model.cpp \
+$(DIR)/run_@CLASSNAME@.cpp \
+$(DIR)/@CLASSNAME@_high_scale_constraint.cpp \
+$(DIR)/@CLASSNAME@_susy_scale_constraint.cpp \
+$(DIR)/@CLASSNAME@_low_scale_constraint.cpp \
+$(DIR)/@CLASSNAME@_lattice_high_scale_constraint.cpp \
+$(DIR)/@CLASSNAME@_two_scale_high_scale_constraint.cpp \
+$(DIR)/@CLASSNAME@_lattice_susy_scale_constraint.cpp \
+$(DIR)/@CLASSNAME@_two_scale_susy_scale_constraint.cpp \
+$(DIR)/@CLASSNAME@_lattice_low_scale_constraint.cpp \
+$(DIR)/@CLASSNAME@_two_scale_low_scale_constraint.cpp \
+$(DIR)/@CLASSNAME@_convergence_tester.hpp \
+$(DIR)/@CLASSNAME@_lattice_convergence_tester.cpp \
+$(DIR)/@CLASSNAME@_two_scale_convergence_tester.cpp \
+$(DIR)/@CLASSNAME@_initial_guesser.cpp \
+$(DIR)/@CLASSNAME@_lattice_initial_guesser.cpp \
+$(DIR)/@CLASSNAME@_two_scale_initial_guesser.cpp \
+$(DIR)/@CLASSNAME@_info.hpp \
+$(DIR)/@CLASSNAME@_info.cpp \
+$(DIR)/@CLASSNAME@_spectrum_generator.hpp \
+$(DIR)/@CLASSNAME@_utilities.hpp \
+$(DIR)/@CLASSNAME@_utilities.cpp \
+: run-metacode-$(MODNAME)
+	@true
+
+run-metacode-$(MODNAME): $(METACODE_STAMP_@CLASSNAME@)
+	@true
+
+$(METACODE_STAMP_@CLASSNAME@): $(DIR)/start.m $(DIR)/FlexibleSUSY.m $(META_SRC) $(TEMPLATES)
 	$(MATH) -run "Get[\"$<\"]; Quit[]"
-
-$(DIR)/@CLASSNAME@_two_scale_susy_parameters.cpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
-	@true
-
-$(DIR)/@CLASSNAME@_two_scale_soft_parameters.hpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
-	@true
-
-$(DIR)/@CLASSNAME@_two_scale_soft_parameters.cpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
-	@true
-
-$(DIR)/scan_@CLASSNAME@.cpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
-	@true
-
-$(DIR)/@CLASSNAME@_slha_io.hpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
-	@true
-
-$(DIR)/@CLASSNAME@_slha_io.cpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
-	@true
-
-$(DIR)/@CLASSNAME@_physical.hpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
-	@true
-
-$(DIR)/@CLASSNAME@_physical.cpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
-	@true
-
-$(DIR)/@CLASSNAME@_model.hpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
-	@true
-
-$(DIR)/@CLASSNAME@_lattice_model.hpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
-	@true
-
-$(DIR)/@CLASSNAME@_lattice_model.cpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
-	@true
-
-$(DIR)/@CLASSNAME@_two_scale_model.hpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
-	@true
-
-$(DIR)/@CLASSNAME@_two_scale_model.cpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
-	@true
-
-$(DIR)/run_@CLASSNAME@.cpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
-	@true
-
-$(DIR)/@CLASSNAME@_high_scale_constraint.cpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
-	@true
-
-$(DIR)/@CLASSNAME@_susy_scale_constraint.cpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
-	@true
-
-$(DIR)/@CLASSNAME@_low_scale_constraint.cpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
-	@true
-
-$(DIR)/@CLASSNAME@_lattice_high_scale_constraint.cpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
-	@true
-
-$(DIR)/@CLASSNAME@_two_scale_high_scale_constraint.cpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
-	@true
-
-$(DIR)/@CLASSNAME@_lattice_susy_scale_constraint.cpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
-	@true
-
-$(DIR)/@CLASSNAME@_two_scale_susy_scale_constraint.cpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
-	@true
-
-$(DIR)/@CLASSNAME@_lattice_low_scale_constraint.cpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
-	@true
-
-$(DIR)/@CLASSNAME@_two_scale_low_scale_constraint.cpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
-	@true
-
-$(DIR)/@CLASSNAME@_convergence_tester.hpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
-	@true
-
-$(DIR)/@CLASSNAME@_lattice_convergence_tester.cpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
-	@true
-
-$(DIR)/@CLASSNAME@_two_scale_convergence_tester.cpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
-	@true
-
-$(DIR)/@CLASSNAME@_initial_guesser.cpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
-	@true
-
-$(DIR)/@CLASSNAME@_lattice_initial_guesser.cpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
-	@true
-
-$(DIR)/@CLASSNAME@_two_scale_initial_guesser.cpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
-	@true
-
-$(DIR)/@CLASSNAME@_info.hpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
-	@true
-
-$(DIR)/@CLASSNAME@_info.cpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
-	@true
-
-$(DIR)/@CLASSNAME@_spectrum_generator.hpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
-	@true
-
-$(DIR)/@CLASSNAME@_utilities.hpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
-	@true
-
-$(DIR)/@CLASSNAME@_utilities.cpp: $(DIR)/@CLASSNAME@_two_scale_susy_parameters.hpp
-	@true
 
 $(LIB@CLASSNAME@_DEP) $(LIB@CLASSNAME@_OBJ) $(DIR)/run_@CLASSNAME@.o $(DIR)/scan_@CLASSNAME@.o: CPPFLAGS += $(GSLFLAGS) $(EIGENFLAGS) $(BOOSTFLAGS)
 
