--- a/templates/module.mk.in
+++ b/templates/module.mk.in
@@ -131,5 +131,6 @@ $(SCAN_@CLASSNAME@_EXE): $(DIR)/scan_@CLASSNAME@.o $(LIB@CLASSNAME@) $(LIBFLEXI)
 		$(CXX) -o $@ $(call abspathx,$^) $(GSLLIBS) $(BOOSTTHREADLIBS) $(LAPACKLIBS) $(FLIBS) $(LOOPTOOLSLIBS)
 
 ALLDEP += $(LIB@CLASSNAME@_DEP)
+ALLSRC += $(LIB@CLASSNAME@_SRC)
 ALLLIB += $(LIB@CLASSNAME@)
 ALLEXE += $(RUN_@CLASSNAME@_EXE) $(SCAN_@CLASSNAME@_EXE)
