Bugfix: link libpthread even if only two-scale method chosen
Since the two-scale method uses threads as well, we have to link
against libpthread in any case.

--- a/config/Makefile.in
+++ b/config/Makefile.in
@@ -20,6 +20,7 @@ LOOPTOOLSLIBS  := @LOOPTOOLSLIBS@
 MAKELIB    := @MAKELIB@
 LIBEXT     := @LIBEXT@
 ENABLE_STATIC_LIBS := @ENABLE_STATIC_LIBS@
+THREADLIBS := @THREADLIBS@
 VERSION    := @VERSION@
 PKGNAME    := @PKGNAME@
 ABSBASEDIR := @ABSBASEDIR@
@@ -119,6 +120,7 @@ showbuild:
 	@echo "ENABLE_LOOPTOOLS = $(ENABLE_LOOPTOOLS)"
 	@echo "LOOPTOOLSFLAGS = $(LOOPTOOLSFLAGS)"
 	@echo "LOOPTOOLSLIBS  = $(LOOPTOOLSLIBS)"
+	@echo "THREADLIBS = $(THREADLIBS)"
 	@echo "ALGORITHMS = $(ALGORITHMS)"
 	@echo "MATH       = $(MATH)"
 	@echo "MODELS     = $(MODELS)"
